--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ env:
     - SEARCH_PATH=$TRAVIS_BUILD_DIR/lib:$TRAVIS_BUILD_DIR/lib/t
 
 script:
-- octave-cli --no-gui --eval ver
+- octave-cli --no-gui -p $SEARCH_PATH --eval ver
 - octave-cli --no-gui -p $SEARCH_PATH --eval "test_mptest(0,1)"
